--- a/localisation/english/DEN_USA/XWY_l_english.yml
+++ b/localisation/english/DEN_USA/XWY_l_english.yml
@@ -68,3 +68,5 @@
  XWY_social_tt:0 "Needs More Than 5 Small Ranch Power And Less than 5 Cattle Baron"
  XWY_communist_tt:0 "Needs less than five on all Mana"
  XWY_royal_tt:0 "Needs more than five on all Mana"
+ XWY_the_red_army:0 "The Red Army"
+ XWY_refounded_army_idea:0 "A New Army"
