--- a/localisation/english/DEN_USA/XTN_l_english.yml
+++ b/localisation/english/DEN_USA/XTN_l_english.yml
@@ -807,8 +807,38 @@ XTN_fortify_south_agrarian_desc:0 "We must defend our south against invaders. Lo
 XTN_home_defense_idea:0 "Home Defense"
 XTN_home_defense_idea_desc:0 "We shall stop every enemy before they even see Nashville."
 
+XTN_home_defense:0 "Home Defense"
+XTN_home_defense_desc:0 "We shall stop every enemy before they even see Nashville."
+
 XTN_hard_defensive:0 "Hard Defensive"
 XTN_hard_defensive_desc:0 "We will stop them and we will take all of their supplies from them."
 
 XTN_moblize_agrarian:0 "Mobilization"
 XTN_moblize_agrarian_desc:0 "We need some new people for our forts."
+
+XTN_cult_of_morrison:0 "Cult of Morrison"
+XTN_cult_of_morrison_desc:0 "Our leader is great and we will die for him!"
+
+XTN_cult_morrison:0 "Cult of Morrison"
+XTN_cult_morrison_desc:0 "Morrison is a great and charismatic leader. People start to build a cult around him."
+
+XTN_expand_farmlands_agrarian:0 "Expand Farmlands"
+XTN_expand_farmlands_agrarian_desc:0 "Our main policy is support of the farmers and workers in tennessee."
+
+XTN_isolationism:0 "Isolationism"
+XTN_isolationism_desc:0 "Our farmers are threatend by foreign markets. We must isolate."
+
+XTN_free_market:0 "Free Market"
+XTN_free_market_desc:0 "Free market = Free people"
+
+XTN_isolationism_idea:0 "Isolationism"
+XTN_isolationism_idea_desc:0 "Our Isolation brings us closer to the land."
+
+XTN_millitary_expansion_industry:0 "Expansion of Millitary Industry"
+XTN_millitary_expansion_industry_desc:0 "To defend our nation we need guns."
+
+XTN_airforce_research:0 "Aircraft Research"
+XTN_airforce_research_desc:0 "Our air is undefendend and our great state needs to be protected."
+
+XTN_defense_tech:0 "Defense Technologies"
+XTN_defense_tech_desc:0 "Our nation needs to stand strong against invaders. New technology in fields of artillery, arms and anti-air will help us achieve our goal of maintaining peace."
