--- a/localisation/english/DEN_USA/XTN_l_english.yml
+++ b/localisation/english/DEN_USA/XTN_l_english.yml
@@ -842,3 +842,45 @@ XTN_airforce_research_desc:0 "Our air is undefendend and our great state needs t
 
 XTN_defense_tech:0 "Defense Technologies"
 XTN_defense_tech_desc:0 "Our nation needs to stand strong against invaders. New technology in fields of artillery, arms and anti-air will help us achieve our goal of maintaining peace."
+
+
+XTN_support_cattle_industry:0 "Support Cattle Industry"
+XTN_support_cattle_industry_desc:0 "Our cattle farmers need support from government."
+
+XTN_living_off_the_land:0 "Living off the land"
+XTN_living_off_the_land_desc:0 "We are running out of our industrial capacity to produce weapons. Thus by defending we will capture enemy equipment."
+
+XTN_living_off_land:0 "Living of the Land"
+XTN_living_off_land_desc:0 "Desperate defence isn't enough we will rob enemy out of his guns and ammunition."
+
+XTN_crush_intelligentsia:0 "Crush Intelligentsia"
+XTN_crush_intelligentsia_desc:0 "They are enemies of the state we must use our power to limit their power."
+
+XTN_grand_wizard:0 "Grand Wizard"
+
+XTN_constitution:0 "Constitution"
+XTN_constitution_desc:0 "Constitution of Tennessee is most liberal in the USA while also protecting intrests of our rual population."
+
+XTN_agrarian_constitution:0 "Tennessee Constitution"
+XTN_agrarian_constitution_desc:0 "Constitution of Tennessee is most liberal in the USA while also protecting intrests of our rual population."
+
+XTN_patron_of_arts:0 "Patron of Arts"
+XTN_patron_of_arts_desc:0 "Our great leader will sponstor art created by americans."
+
+XTN_sponsor_tanks:0 "Develop Tanks"
+XTN_sponsor_tanks_desc:0 "Our government will sponsor research of tanks."
+
+XTN_sponsor_support:0 "Sponsor Support Divisions"
+XTN_sponsor_support_desc:0 "Our army will not stand the wave of enemies without medics and mechanics."
+
+XTN_nashville_millitary_academy:0 "Nashville Millitary Academy"
+XTN_nashville_millitary_academy_desc:0 "Our generals need to be educated in new forms of war."
+
+XTN_NMA:0 "Nashville Millitary Academy"
+XTN_NMA_desc:0 ""
+
+XTN_combat_minor_depression:0 "Combat Minor Depression"
+XTN_combat_minor_depression_desc:0 "Series of reforms will help us combat effects of minor depression."
+
+XTN_uni_knoxville:0 "University of Knoxville"
+XTN_uni_knoxville_desc:0 "We shall open a great university to expand knowledge of our people."
