--- a/localisation/english/DEN_USA/XTN_l_english.yml
+++ b/localisation/english/DEN_USA/XTN_l_english.yml
@@ -968,3 +968,30 @@ XTN_maintain_morrison_desc:0 "Morrison is a great leader and people will follow 
 
 XTN_embrace_rastafarianism:0 "Embrace Rastafari"
 XTN_embrace_rastafarianism_desc:0 "We are in Jamaica now. Locals don't like to be ruled by americans. We should embrace local religion and hold local elections. This could radicalize Mr. Morrison though."
+
+XTN_god_morrison:0 "God Morrison"
+XTN_god_morrison_desc:0 "Mr. Morrison has lead Americans to heaven on earth. He is considered a reincarnation of god now."
+
+XTN_isolationism_jamaica:0 "Isolationism"
+XTN_isolationism_jamaica_desc:0 "We have finally found a heaven on earth. It's time to distance ourselfs from outside world."
+
+XTN_fort_jamaica:0 "Fort Jamaica"
+XTN_fort_jamaica_desc:0 "We shall build a line of fortifications on the island to protect us from any outside danger."
+
+XTN_air_defence:0 "Air Defence"
+XTN_air_defence_desc:0 "Our island is the best spot for air operations."
+
+XTN_strengthen_domestic_infrastructure:0 "Strengthen Domestic Infrastructure"
+XTN_strengthen_domestic_infrastructure_desc:0 "We need to build railoads, roads and cities to improve quality of life on the island."
+
+XTN_nationalize_foreign_investments:0 "Nationalize Foreign Investments"
+XTN_nationalize_foreign_investments_desc:0 "We must drive out other states out of the island. Taking away their money that they put in here will enrage many nations but will also allow us to pay of the british."
+
+XTN_nuclear_research:0 "Nuclear Research"
+XTN_nuclear_research_desc:0 "We have a lot of free scientists that escaped with us. Looking how we do not need new tanks or guns we can divert their attention to ulitmate weapons."
+
+XTN_peace_at_last:0 "Peace at last"
+XTN_peace_at_last_desc:0 "Nobody can hurt us. We are self sufficient. It's over we are finally free from evil of the world."
+
+XTN_nuclear_reactors:0 "Nuclear Reactors"
+XTN_nuclear_reactors_desc:0 "We will create a new power source and a source of most destructive weapon known to man. We will never be invaded again."
