--- a/localisation/english/DEN_USA/XTN_l_english.yml
+++ b/localisation/english/DEN_USA/XTN_l_english.yml
@@ -1078,3 +1078,9 @@ XTN_north_american_kingdom_of_god_desc:0 "The time is now! We shall invade ameri
 
 XTN_empire_of_god_idea:0 "Empire of God"
 XTN_empire_of_god_idea_desc:0 "North America is rightfully ours and God will support us!"
+
+XTN_rise_of_KKK:0 "Rise of Evil"
+XTN_rise_of_KKK_desc:0 "The Ku Klux Klan is a racist organization founded after the Civil War in Pulaski Tennessee. They always have been the problem, but now? They are in charge."
+
+XTN_purge:0 "Purge"
+XTN_purge_desc:0 "Our beautiful State of Tennessee is sick with communists and anarchists! It's time to kill'em all!"
