Utah major gfx and loc updates

--- a/localisation/english/DEN_USA/XUT_l_english.yml
+++ b/localisation/english/DEN_USA/XUT_l_english.yml
@@ -73,6 +73,68 @@
  XUT_integrate_union_desc:0 "Our neighbors have similar ideas and customs as we do. We are economically tied and cultrally aligned. It only makes sense to unite under the same flag."
  XUT_sweep_the_rest:0 "Sweep the Rest"
  XUT_sweep_the_rest_desc:0 "Due to the tyranny of the government, the people have been strangled into a chokehold. We must liberate these people at all costs."
+ XUT_western_alliance:0 "The Western Alliance"
+ XUT_western_alliance_desc:0 "The best countermeasure against chaos and occupation is a strong regional alliance to protect our interests. Perhaps our neighbors will find this offer enticing."
+ XUT_ensure_neighbor_stability:0 "Ensure Local Stability"
+ XUT_ensure_neighbor_stability_desc:0 "Our closest neighbors have stuggled with maintaining power post-collapse. It is best if we work together to stabilize the immediate region."
+ XUT_invite_neighbors:0 "Invite Our Neighbors"
+ XUT_invite_neighbors_desc:0 "Now that the future of our states is secure, we can finally start strengthening our relations."
+ XUT_north_influence:0 "Influence the Great North"
+ XUT_north_influence_desc:0 "Our capital is right up against our northern border. The best way to ensure our defense is to align our northern neighbors to our cause."
+ XUT_western_influence:0 "Influence the West"
+ XUT_western_influence_desc:0 "The west represents a major political and population center. These people must be free and peaceful."
+ XUT_invite_west:0 "Invite the West"
+ XUT_invite_west_desc:0 "Now that California and Nevada align with our ideals, it is time to officialize our relations."
+ XUT_cascadia_influence:0 "Influence Cascadia"
+ XUT_cascadia_influence_desc:0 "Cascadia is an important component of the United States. It is wise to guide those states towards democratic ideals."
+ XUT_invite_cascadia:0 "Invite the Cascadians"
+ XUT_invite_cascadia_desc:0 "Now that Cascadia is a beacon of democracy, it is time to invite them to our alliance."
+ XUT_integrated_alliance:0 "Integrate the Alliance"
+ XUT_integrated_alliance_desc:0 "Now that our alliance is strong, we can propose a further integration of our states."
+ XUT_picking_up_the_pieces:0 "Picking Up the Pieces"
+ XUT_picking_up_the_pieces_desc:0 "After the collapse of the federal government, the state of the United States has been horrible. To revert this unfortunate situation, we must align with the remnants of the government and restore American democracy."
+ XUT_old_west:0 "Claim the Old West"
+ XUT_old_west_desc:0 "Nevada and Colorado have historically been part of Utah. Now is our time to reassert our claims."
+ XUT_stage_incidents:0 "Stage Border Incidents"
+ XUT_stage_incidents_desc:0 "The best offense is a false interpretation of defense. We can justify war under the pretense of national security."
+ XUT_pull_strings:0 "Pull the Strings"
+ XUT_pull_strings_desc:0 "Now that the federal government controls our claims, we can sway congress in DC to provide us our rightful lands."
+ XUT_secure_west_holdings:0 "Secure Our Holdings"
+ XUT_secure_west_holdings_desc:0 "The people of Nevada and Colorado have stuggled to tolerate our administration. We must finally ingrain the idea that all on our lands are Utahns."
+ 
+ XUT_establish_military_school:0 "Establish Military Academies"
+ XUT_establish_military_school_desc:0 "Our war strategies are out of date. It is time to reapproach the concept of war from a new perspective."
+ XUT_new_guns:0 "Develop New Guns"
+ XUT_new_guns_desc:0 "Our guns are rusty and subpar. It is time to design and manufacture new weapons."
+ XUT_new_tanks:0 "Design New Tanks"
+ XUT_new_tanks_desc:0 "We have yet to develop our own tanks. It is time to change that."
+ XUT_new_artillery:0 "Build New Artillery"
+ XUT_new_artillery_desc:0 "Artillery is a necessity in modern warfare. We must update our blueprints to match that."
+ XUT_lessons_from_the_past:0 "Lessons From the Past"
+ XUT_lessons_from_the_past_desc:0 "We cannot go forward without looking at the past."
+ XUT_new_military_thought:0 "New Military Thought"
+ XUT_new_military_thought_desc:0 "Thinking forward with new ideas is key to victory."
  
  XUT_fourth_great_awakening:0 "The Fourth Great Awakening"
  XUT_fourth_great_awakening_desc:0 "Our forefathers have enlightened the people to limited success. Now with the torch in our hands, we can achieve even larger greatness."
+ 
+ XUT_four_year_plan:0 "Four Year Plan"
+ XUT_four_year_plan_desc:0 "The Great Depression has devistated our economy and the collapse of the United States has only worsened the situation. It is time to intervene and move on the right track."
+ XUT_infrastructure_act:0 "The Infrastructure Act"
+ XUT_infrastructure_act_desc:0 "Utah is disconnected and isolated, even from itself. This is unsustainable and cannot continue."
+ XUT_national_highways:0 "Develop State Highways"
+ XUT_national_highways_desc:0 "To link isolated cities, we must build highways to connect major hubs of development."
+ XUT_fix_old_roads:0 "Fix Old Roads"
+ XUT_fix_old_roads_desc:0 "The roads are in disrepair. You cannot drive a mile on Utah roads without major potholes. This lack of funding (and the potholes) must be filled."
+ XUT_develop_new_industry:0 "Develop New Industries"
+ XUT_develop_new_industry_desc:0 "Our current economy is mostly agricultural. If no new factories are built, the state will fall behind."
+ XUT_arms_development:0 "Fund Arms Development"
+ XUT_arms_development_desc:0 "Without federal funding, it is up to the state to expand arms manufacturing."
+ XUT_a_new_generation:0 "A New Generation"
+ XUT_a_new_generation_desc:0 "The youth of Utah are growing up in an unprecedented time. They must be taught both perserverence and the values of Utah."
+ XUT_change_curriculum:0 "Change the Curriculum"
+ XUT_change_curriculum_desc:0 "The textbooks are outdated and don't reflect modern values. The curriculum has to be adapted for the world of tomorrow."
+ XUT_fund_new_schools:0 "Fund New Schools"
+ XUT_fund_new_schools_desc:0 "The state of the Utah education system is dissapointing. Schools are small and falling apart. The government must completely rebuild these institutions from scratch."
+ XUT_gather_scientists:0 "Attract Foreign Scientists"
+ XUT_gather_scientists_desc:0 "To catch up on the world stage, it is best to incentivise scientists from abroad to work for Utah. The location may be remote, but money talks."
