Finish to Fascist Path FUCK YEAH TREE ALMOST FINISHED

--- a/localisation/english/DEN_USA/XTN_l_english.yml
+++ b/localisation/english/DEN_USA/XTN_l_english.yml
@@ -1084,3 +1084,123 @@ XTN_rise_of_KKK_desc:0 "The Ku Klux Klan is a racist organization founded after 
 
 XTN_purge:0 "Purge"
 XTN_purge_desc:0 "Our beautiful State of Tennessee is sick with communists and anarchists! It's time to kill'em all!"
+
+XTN_KKK_knights:0 "Knights of Ku Klux Klan"
+XTN_KKK_knights_desc:0 "Our White and brave knights will defend America against evil!"
+
+XTN_knights_of_kkk:0 "Knights of Ku Klux Klan"
+XTN_knights_of_kkk_desc:0 "Nation without an army is weak and sick. We will arm our klansman!"
+
+XTN_racial_theories:0 "Racial Theories"
+XTN_racial_theories_desc:0 "Written by Simmons a scientific theory that resembles Nuremberg Laws of nazi germany."
+
+XTN_racial_purity:0 "Racial Purity"
+XTN_racial_purity_desc:0 "Our nation is multicultural. This is unacceptable we must purge Tennessee out of all non-whites."
+
+XTN_slavery:0 "Legal Slavery"
+XTN_slavery_desc:0 "We are back in XIX century."
+
+XTN_bring_back_slavery:0 "Bring Back Slavery"
+XTN_bring_back_slavery_desc:0 "Our klan cannot fully purge all non-whites from the country, but we can put them back in chains."
+
+XTN_2_purge:0 "2nd Purge"
+XTN_2_purge_desc:0 "We shall kill are non-whites in the country no matter the consequences."
+
+XTN_mobilization_kkk:0 "Mobilization"
+XTN_mobilization_kkk_desc:0 "We need meat for the grinder! Every patriot or not shall serve us!"
+
+XTN_millitary_expansion:0 "Millitary Expansion"
+XTN_millitary_expansion_desc:0 "We need to build arms for our klansman"
+
+XTN_reclaim_csa:0 "Reclaim CSA"
+XTN_reclaim_csa_desc:0 "Confederacy was the greatest state in human history and we must re-unite again!"
+
+XTN_war_with_carolina:0 "War with Carolinas"
+XTN_war_with_carolina_desc:0 ""
+
+XTN_war_with_virginia:0 "War with Virginia"
+XTN_war_with_virginia_desc:0 ""
+
+XTN_war_with_south:0 "War with South"
+XTN_war_with_south_desc:0 ""
+
+XTN_war_with_lousiana:0 "War with Lousiana"
+XTN_war_with_lousiana_desc:0 ""
+
+XTN_war_with_tx:0 "War with Texas"
+XTN_war_with_tx_desc:0 ""
+
+XTN_south_united:0 "South United"
+XTN_south_united_desc:0 "We have reconquered old lands of Confederacy! It's time to conquer USA now!"
+
+XTN_rebel_yell:0 "Rebel Yell"
+XTN_rebel_yell_desc:0 "We must boost our morale by old traditions of the south. Yee-haw!"
+
+XTN_rebel_yell_idea:0 "Rebel Yell"
+XTN_rebel_yell_idea_desc:0 "Yee-haw!"
+
+XTN_war_with_oklahoma:0 "War with Oklahoma"
+XTN_war_with_oklahoma_desc:0 ""
+
+XTN_develop_carolina:0 "Develop Carolina"
+XTN_develop_carolina_desc:0 "Carolina is a rual wasteland. They need to be mobilized to build more factiories."
+
+XTN_develop_louisiana:0 "Develop Louisiana"
+XTN_develop_louisiana_desc:0 "We need to put more workforce in Lousiana to well work."
+
+XTN_develop_mississippi:0 "Develop Mississippi"
+XTN_develop_mississippi_desc:0 "We need to start modernization of the south. We shall start from Mississippi."
+
+XTN_war_with_new_mexico:0 "War with New Mexico"
+XTN_war_with_new_mexico_desc:0 ""
+
+XTN_modern_cavalery_idea:0 "Modern Cavalery"
+XTN_modern_cavalery_idea_desc:0 "Cavalery divisons were best of the best durning civil war. We need to maintain the tradition!"
+
+XTN_modern_cavalery:0 "Modern Cavalery"
+XTN_modern_cavalery_desc:0 "Cavalery divisons were best of the best durning civil war. We need to maintain the tradition!"
+
+XTN_revenge_for_civil_war:0 "Revenge for Civil War"
+XTN_revenge_for_civil_war_desc:0 "The time is now. We shall Capture Washington and bring end to 75 years of humiliation."
+
+XTN_burn_lincolns_house:0 "Burn down Lincoln's House"
+XTN_burn_lincolns_house_desc:0 "Our mortal enemy has long been dead, but we still can burn down memory of him."
+
+XTN_revenge_on_yankee:0 "Kill Yankees"
+XTN_revenge_on_yankee_desc:0 "Washington is down, We have conquered our mortal enemies. What now? Total anihilation of New Progressive America."
+
+XTN_dixie_land:0 "Dixie Land"
+XTN_dixie_land_desc:0 "We have achived victory over Unionists!"
+
+XTN_spirit_of_dixie:0 "Spirit of Dixie"
+XTN_spirit_of_dixie_desc:0 "We have achived victory over Unionists! It's time to spread word of our victory around America!"
+
+XTN_cotton_trade:0 "Cotton Trade"
+XTN_cotton_trade_desc:0 "Our agriculture is booming! We shall make a quick buck out of cotton trade."
+
+XTN_golden_circle:0 "Knights of Golden Circle"
+XTN_golden_circle_desc:0 "The Knights of the Golden Circle (KGC) was a secret society founded in 1854 by American George W. L. Bickley, the objective of which was to create a new country, known as the Golden Circle, where slavery would be legal. The country would have been centered in Havana and would have consisted of the Southern United States and a "golden circle" of territories in Mexico (which was to be divided into 25 new slave states), Central America, northern parts of South America, and Cuba, Haiti, Dominican Republic, and most other islands in the Caribbean."
+
+XTN_knights_of_golden_circle:0 "Knights of Golden Circle"
+XTN_knights_of_golden_circle_desc:0 "The Knights of the Golden Circle (KGC) was a secret society founded in 1854 by American George W. L. Bickley, the objective of which was to create a new country, known as the Golden Circle, where slavery would be legal. The country would have been centered in Havana and would have consisted of the Southern United States and a "golden circle" of territories in Mexico (which was to be divided into 25 new slave states), Central America, northern parts of South America, and Cuba, Haiti, Dominican Republic, and most other islands in the Caribbean."
+
+XTN_claims_on_mexico:0 "Claim Mexico"
+XTN_claims_on_mexico_desc:0 "Now American rule over Mexicans seems possible. Control over mexico would allow us for expansion of slavery and give access to their oil reserves."
+
+XTN_arizona_war:0 "War with Arizona"
+XTN_arizona_war_desc:0 ""
+
+XTN_legitimize_CSA_gov:0 "Legitimize Confederate Government"
+XTN_legitimize_CSA_gov_desc:0 "Even though we control all the lands of Confederacy we are still seen as recreators. It's time to change it and formalize our government."
+
+XTN_conquer_deseret:0 "Conquer Deseret"
+XTN_conquer_deseret_desc:0 "Lands of deseret will be our final conquest that will realize american part of Golden Circle Idea."
+
+XTN_kansas_missouri:0 "Kansas-Missouri War"
+XTN_kansas_missouri_desc:0 ""
+
+XTN_colorado_war:0 "Colorado War"
+XTN_colorado_war_desc:0 ""
+
+XTN_american_dream_CSA:0 "Confederate Dream"
+XTN_american_dream_CSA_desc:0 "We have fully united the South, but it's not yet time to rest."
