--- a/localisation/english/DEN_USA/XNV_l_english.yml
+++ b/localisation/english/DEN_USA/XNV_l_english.yml
@@ -1,11 +1,21 @@
 ﻿l_english:
  XNV: "Nevada"
  XNV_DEF: "Nevada"
- XNV_ADJ: "Nevada"
- 
- NVD: "Nevadan Idaho"
- NVD_DEF: "Nevada Idaho Teritory"
- NVD_ADJ: "Nevada"
+ XNV_ADJ: "Nevadan"
+
+ XNV_fascism: "Silver State"
+ XNV_fascism_DEF: "Government of the Silver State"
+ XNV_fascism_ADJ: "Nevadan"
+
+ NVD: "South Idaho"
+ NVD_DEF: "Southern Idaho"
+ NVD_ADJ: "South Idaho"
+
+ NevadaIdahoPuppet_State:0 "Nevadan Supervised Government"
+
+ NVD_XNV_NevadaIdahoPuppet_State: "Nevadan Idhao"
+ NVD_XNV_NevadaIdahoPuppet_State_DEF: "Nevada Idaho Territory"
+ NVD_XNV_NevadaIdahoPuppet_State_ADJ: "Nevadan"
 
  STATE_938: "Lower Nevada"
  STATE_959: "Lower Idaho"
@@ -30,3 +40,8 @@
  XNV_AFOCIdea_desc:0 "The Nevadan spirit aims to overcome the nation's difficulties in these trying times."
  XNV_GreatDepression:0 "Great Depression"
  XNV_GreatDepression_desc:0 "§RThe failure of several major institutions has left the Nevada economy in shambles. The main industry of our economy, mineral extraction, has plummeted in value leading many to question how silver the Silver State really is."
+
+
+
+ XID_Bookmark_desc:0 "The Nevadan-Idaho War of 1930 ended with a considerable Nevada victory. In the Boise Peace Treaty, Nevada took over Idaho as a provisional government. While the former Idaho government was left weak, they continued normal operations in parts of the Northern region of Idaho as an illegitimate state. Eventually, in 1932, they declared independence from the Nevadan Idaho Territory with little pushback."
+ NVD_Bookmark_desc:0 "The Nevadan-Idaho War of 1930 ended with a considerable Nevada victory. In the Boise Peace Treaty, Nevada took over Idaho as a provisional government. The governing officials have started to become bitter with the Nevadan government after a lack of support to prevent the succesion of Free Idaho and are considering leaving Nevada's reign as well."
