Here be dragons nerfed to hell
Also map stuff added just for VS Code to stop bitching. None of this causes errors

--- a/localisation/english/anarchy_l_english.yml
+++ b/localisation/english/anarchy_l_english.yml
@@ -1,4 +1,6 @@
 ﻿l_english:
+ anarchy_idea:0 "Anarchy"
+anarchy_no_manpower:0 "Lawless"
  ZBJ: "Baja California Anarchy"
  ZBJ_DEF: "the Baja California Anarchy"
  ZBJ_ADJ: "Baja California Anarchy"
