--- a/localisation/english/DEN_USA/XTN_l_english.yml
+++ b/localisation/english/DEN_USA/XTN_l_english.yml
@@ -1210,3 +1210,6 @@ XTN_invite_ger_desc:0 "Nazi Germany is our most important ally. We shall ask for
 
 XTN_german_tech_support:0 "German Tech Support"
 XTN_german_tech_support_desc:0 "Our millitary is lacking in tanks. We shall ask our beautiful friends to give us some guide to modernization of mechanized cavalery."
+
+
+XTN_book_descr:0 "The nation of Tennessee is isolated pacifist state, but this is going to change. The Infighting in Intelligentsia camp, the calls for agrarian union and the rise of Ku Klux Klan will definietly influence politics of this nation for next decades. Intelligentsia calls for communist or even anarchist society and re-unification of United States. Agrarians call for steady course with isolationism and farmlands at their focus, and KKK? Ku Klux Klan calls for all american revolution that will enslave everybody who they disagree with. They also aim to avange loss of confederacy in civil war. No matter who will come on top, the next 30 years look interesting."
